--- a/ddp-workspace/projects/ddp-atcp/src/app/styles/common.scss
+++ b/ddp-workspace/projects/ddp-atcp/src/app/styles/common.scss
@@ -4,7 +4,6 @@
 
 @page {
   size: auto;
-  margin: 0mm;
 }
 
 hr {
